made postgres driver connection pool and migrations
