# docs/swagger.json
@@ -86,6 +86,12 @@
                             "$ref": "#/definitions/middleware.customError"
                         }
                     },
+                    "404": {
+                        "description": "Refresh token was incorrect or token not found",
+                        "schema": {
+                            "$ref": "#/definitions/middleware.customError"
+                        }
+                    },
                     "500": {
                         "description": "Internal error occured",
                         "schema": {
