# internal/endpoint/handlers.go
@@ -45,6 +45,7 @@ func (e *endpoint) GetAccessToken(c *gin.Context) {
 // @Param body body RefreshTokenRequest true "Refreshed pair token-refresh"
 // @Success 200 {object} RefreshTokenResponse
 // @Failure 400 {object} middleware.customError "Received bad request"
+// @Failure 404 {object} middleware.customError "Refresh token was incorrect or token not found"
 // @Failure 500 {object} middleware.customError "Internal error occured"
 // @Router /v1/token/refresh [post]
 func (e *endpoint) RefreshToken(c *gin.Context) {
